# blender_cvmarkers_animator

./: .gitignore  CMakeLists.txt  README.md  detectedBones.csv  markersDetection.csv
blender_animation/: bone.py  main.py  marker.py
cvmarkers_detection/: calibration_input_settings.xml  out_camera_data.xml  out_camera_data_PC.xml
cvmarkers_detection/cvdetection/: CMakeLists.txt
cvmarkers_detection/cvdetection/include/cvdetection/: bone.hpp  camera.hpp  marker.hpp
cvmarkers_detection/cvdetection/src/: bone.cpp  camera.cpp  marker.cpp
cvmarkers_detection/executables/: CMakeLists.txt  main.cpp  printmarker.cpp
